# muon-firmware

./: Cargo.toml  Embed.toml  README.md  build.rs  memory.x  start
.cargo/: config.toml
.github/workflows/: ci_checks.yml
src/: config.rs  flash.rs  kb.rs  led.rs  main.rs
