[package]
authors = ["Dekanova LLC, mriise<me@mriise.net>"]
edition = "2021"
readme = "README.md"
name = "muon-firmware"
version = "0.1.0-rc2"
resolver = "2"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rtic = "1.0.0"
# systick-monotonic = "1.0.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-time = "0.12.1"

defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-halt = "0.2.0"

# TODO maybe make a BSP
rp2040-hal = { version = "0.7.0", features = ["rt", "rtic-monotonic"] }
rp2040-boot2 = "0.2.0"
fugit = "*"

usb-device = "0.2.8"
usbd-hid = "0.6.0"
# TODO find out why the new release isnt published
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "03542891e9fac096b72bf45316992d20b39ba335" }

ws2812-pio = "0.5.0"
smart-leds = "0.3.0"
smart-leds-trait = "0.2"
switch-hal = "0.4.0"

nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
