[package]
authors = ["Dekanova LLC, mriise<me@mriise.net>"]
edition = "2021"
readme = "README.md"
name = "muon-firmware"
version = "0.1.0-rc2"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.3"
# systick-monotonic = "1.0.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-storage = "0.3.0"

defmt = "0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# panic-halt = "0.2.0"

# TODO maybe make a BSP
# rp2040-flash = { git = "https://github.com/jannic/rp2040-flash", rev = "cea0e1a878860181923fc147e13dc0cc2f19e4b1" }
rp2040-hal = { version = "0.7.0", features = ["rt", "rtic-monotonic"] }
rp2040-boot2 = "0.2.1"
fugit = "0.3.6"

usb-device = "0.2.9"
usbd-hid = "0.6.1"
openinput-rust = { version = "*", path = "../openinput-rust" }
ssmarshal = { version = "*", default-features = false }
once_cell = { version = "1.17.0", default-features = false }

# TODO find out why the new release isnt published
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "03542891e9fac096b72bf45316992d20b39ba335" }

ws2812-pio = "0.5.0"
smart-leds = "0.3.0"
smart-leds-trait = "0.2"
switch-hal = "0.4.0"

nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

# config storage
siphasher = "0.3"
tickv = "1.0.0"
serde = { version = "1.0.152", features = [
    "serde_derive",
], default-features = false }
minicbor = { version = "0.19.0", features = ["derive"] }

[dependencies.rp2040-tickv]
git = "https://github.com/Dekanova/rp2040-tickv.git"
rev = "70b9c0d70c4faeb95deffb6b49ed8d4552daaf17"

[features]
# naming is a bit off for this since this really just enables booting from RAM (which is broken rn)
release = []
# default = ["release"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
